# projeto

./: config.py  main.py  pyproject.toml  suamascara.db
app/: __init__.py
app/controllers/: views.py
app/models/: forms.py  tables.py
app/templates/: cadastro.html  catalogo.html  index.html  login.html
