[tool.poetry]
name = "projeto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
peewee = "^3.13.3"
flask = "^1.1.2"
css = "^0.1"
Flask-Login = "^0.5.0"
flask-wtf = "^0.14.3"
wtforms = "^2.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
